add payment.html, button remove,buttons view and cart

--- a/css/styles.css
+++ b/css/styles.css
@@ -212,7 +212,7 @@ a.remove {
   font-family: "Lato", sans-serif;
   color: #ffffff;
   font-weight: bold;
-  background: #5A6268;
+  background: #d42524;
   padding: .5em;
   font-size: .75em;
   display: inline-block;
