--- a/css/styles.css
+++ b/css/styles.css
@@ -266,7 +266,7 @@ a.remove:hover {
   text-align: right;
 }
 .subtotal .totalRow .label {
-    font-family: "Lato", sans-serif;
+  font-family: "Lato", sans-serif;
   font-size: .85em;
   text-transform: uppercase;
   color: #777;
@@ -276,6 +276,27 @@ a.remove:hover {
   width: 35%;
 }
 
+.subtotal2 .totalRow .label{
+  font-family: "Lato", sans-serif;
+  font-size: .85em;
+  text-transform: uppercase;
+  color: #777;
+}
+.subtotal2 .totalRow.final {
+  font-size: 1.25em;
+  font-weight: bold;
+}
+
+.subtotal2 .totalRow span {
+  display: inline-block;
+  padding: 0 0 0 1em;
+  text-align: right;
+}
+
+.subtotal2 .totalRow {
+  padding: .5em;
+  text-align: right;
+}
 @media only screen and (max-width: 39.375em) {
   .wrap {
     width: 98%;
@@ -455,4 +476,10 @@ line-height: inherit;
 margin-top: -8px;
 background-color: #33a1ea;
 
+}
+
+
+ .black{
+
+  color:#212529;
 }
