--- a/css/styles.css
+++ b/css/styles.css
@@ -114,8 +114,7 @@ ol, ul {
 }
 
 .wrap {
-  padding: 160px 0;
-  padding: 3% 0;
+  padding: 1rem 0;
   margin-bottom: 5em;
 }
 
@@ -301,7 +300,7 @@ a.remove:hover {
 @media only screen and (max-width: 39.375em) {
   .wrap {
     width: 98%;
-    padding: 2% 0;
+    padding: 1% 0;
   }
 
   .projTitle {
@@ -484,3 +483,30 @@ background-color: #33a1ea;
 
   color:#212529;
 }
+
+
+
+.parent {
+  width: 100px;
+}
+
+.container2 {
+  display: block;
+  width: 100%;
+  height: 80px;
+  position: relative;
+  overflow: hidden;
+ 
+}
+
+.container2 img {
+  display: block;
+  max-width: 100%;
+  max-height: 100%;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
